[gd_scene load_steps=4 format=4]

[ext_resource type="Script" path="res://UI/ore_collected.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bw7hrf43h73ow" path="res://Art/OreCollectedText.png" id="2"]
[ext_resource type="Texture2D" uid="uid://cm40vqt7globl" path="res://Art/OreIcon.png" id="3"]

[node name="OreCollected" type="Control"]
custom_minimum_size = Vector2(180, 72)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="Text" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2")
stretch_mode = 2

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 6.0
offset_right = 66.0
offset_bottom = 72.0
texture = ExtResource("3")
stretch_mode = 2

[node name="LabelContainer" type="SubViewportContainer" parent="."]
custom_minimum_size = Vector2(192, 72)
layout_mode = 0
offset_left = 84.0
offset_right = 276.0
offset_bottom = 72.0
pivot_offset = Vector2(24, 36)
stretch = true
stretch_shrink = 6

[node name="SubViewport" type="SubViewport" parent="LabelContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(32, 12)
render_target_update_mode = 4

[node name="Label" type="Label" parent="LabelContainer/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9686269760131836, 1, 0.9725490212440491, 1)
theme_override_colors/font_outline_color = Color(0.05490199849009514, 0.06666669994592667, 0.062745101749897, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "0"

[node name="PopupContainer" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 102.0
offset_right = 270.0
offset_bottom = 174.0
pivot_offset = Vector2(72, 36)
stretch = true
stretch_shrink = 6

[node name="SubViewport" type="SubViewport" parent="PopupContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(39, 12)
size_2d_override = Vector2i(20, 12)
render_target_update_mode = 4

[node name="Label" type="Label" parent="PopupContainer/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 41.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8313729763031006, 0.2274509966373444, 0.168626993894577, 1)
theme_override_colors/font_outline_color = Color(0.05490199849009514, 0.06666669994592667, 0.062745101749897, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "+0!"
vertical_alignment = 1

[node name="Popup Hang Time" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="Popup Hang Time" to="." method="_on_popup_hang_time_timeout"]
